<resources>
    <string name="app_name">Imageview</string>
    <string name="Title">ImageVIew</string>
    <string name="action_settings">Settings</string>
    <string name="button_library">library</string>
    <string name="button_google">google</string>
    <string name="search_hint">google!</string>
    <string name="search_button">search</string>
    <string name="button_search_next">next</string>
    <string name="button_search_previous">previous</string>
    <string name="button_save">save</string>
    <string name="button_library_next">next</string>
    <string name="button_library_previous">previous</string>
    <string name="button_delete">delete</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
