<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="@string/Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_google"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/library_webview"
        android:layout_alignEnd="@+id/library_webview" />
    <Button
        android:id="@+id/button_library_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library_next"
        android:layout_alignTop="@+id/button_library_previous"
        android:layout_alignRight="@+id/library_webview"
        android:layout_alignEnd="@+id/library_webview" />
    <Button
        android:id="@+id/button_library_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library_previous"
        android:layout_alignTop="@+id/button_delete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <WebView
        android:id="@+id/library_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_library_next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_search" />

</RelativeLayout>
