<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:id="@+id/search_fragment">

    <TextView android:text="@string/Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    <Button
        android:id="@+id/button_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_alignBottom="@+id/google_search"
        android:layout_alignLeft="@+id/button_library"
        android:layout_alignStart="@+id/button_library" />

    <EditText
        android:id="@+id/google_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:layout_below="@+id/button_library"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_library"
        android:layout_toStartOf="@+id/button_library" />
    <!--android:imeActionLabel="@string/search_button"/>-->
    <!--android:imeOptions="actionSend" -->
    <WebView
        android:id="@+id/search_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button_search" />

</RelativeLayout>
